1、进入音视频详情自动播放 2、音频支持后台播放 3、问题的回答列表标题超过2行支持“…全文”的展示

--- a/manifest.json
+++ b/manifest.json
@@ -44,7 +44,9 @@
 					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
 				]
 			},
-			"ios": {},
+			"ios": {
+				"UIBackgroundModes":["audio"]
+			},
 			/* ios打包配置 */
 			"sdkConfigs": {}
 		}
